# bevy_spicy_data

./: .gitignore  Cargo.toml  README.MD  shell.nix
assets/: game.config
derive/: Cargo.toml
derive/src/: lib.rs
examples/: simple.rs  simple.toml  text.rs
src/: lib.rs
