[package]
name = "bevy_spicy_data"
version = "0.1.0"
edition = "2018"
resolver = "2"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive"]

[dependencies]
anyhow = "1.0.43"
bevy = { version = "0.5.0", default-features = false }
bevy_spicy_data_derive = { path = "./derive/" }
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"

[dev-dependencies]
toml = { version = "0.5.8" }
bevy = { version = "0.5.0" }


[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
